fixtures/cs-hash-01/good/dynamic-algorithm-variable.ts
import { createHash } from "crypto";

export function hashPassword(password: string, algorithm: string) {
	return createHash(algorithm).update(password).digest("hex");
}
